# Metl-OpenHand-Coder

./: .env.example  .gitignore  .npmrc  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  traefik-dynamic.yml  traefik.yml
apps/agent-api/: .env.example  Dockerfile  alembic.ini  pyproject.toml  pytest.ini
apps/agent-api/alembic/: env.py
apps/agent-api/alembic/versions/: 001_initial_schema.py
apps/agent-api/src/: main.py
apps/agent-api/src/api/: __init__.py  jobs.py  previews.py  reports.py  v0.py
apps/agent-api/src/core/: __init__.py  config.py  database.py  orchestrator.py
apps/agent-api/src/models/: __init__.py  database.py
apps/agent-api/src/services/: __init__.py  browser.py  github.py  openhands.py  preview.py  resource_manager.py  v0.py  vercel_ai.py
apps/agent-api/tests/: README.md  test_orchestration.py  test_services.py
apps/dashboard/: Dockerfile  next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/app/reports/: page.tsx
apps/dashboard/app/settings/: page.tsx
apps/dashboard/components/: JobForm.tsx  JobList.tsx  LogStream.tsx  Navbar.tsx  PreviewFrame.tsx  ReportViewer.tsx
apps/dashboard/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
apps/dashboard/lib/: api.ts
scripts/: deploy.sh  init-server.sh  local-dev.sh
services/openhands-runner/: Dockerfile  entrypoint.sh  metl-agent-wrapper.py  requirements.txt
services/preview-builder/: Dockerfile  entrypoint.sh  nginx.conf
(+1 files in other folders)
