[project]
name = "metl-agent-api"
version = "0.1.0"
description = "Metl Agent API - FastAPI backend for the autonomous coding agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.17",
    "websockets>=14.1",
    "docker>=7.1.0",
    "GitPython>=3.1.43",
    "click>=8.1.7",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "playwright>=1.49.0",
    "pyyaml>=6.0.2",
    "aiofiles>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true